# cadex

./: .clang-format  .gitignore  CMakeLists.txt
cadex/: CMakeLists.txt
cadex/src/: CX_Cadex.cpp
core/: CMakeLists.txt
core/include/: CX_Circle.h  CX_Core.h  CX_Ellipse.h  CX_Export.h  CX_Obj.h  CX_ShapeBase.h  CX_ShapeFactory.h  CX_Spiral.h  CX_Type.h
core/src/: CX_Circle.cpp  CX_Ellipse.cpp  CX_Obj.cpp  CX_ShapeBase.cpp  CX_ShapeFactory.cpp  CX_Spiral.cpp  CX_Type.cpp
executable/: cadex
